--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+      <link rel="stylesheet" href="css/patternfly.css" />
+
       <title>Cody Scruggs</title>
    </head>
    <body>
