Removed PF and BS. Doing custom css.

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+      <!-- Meta tags -->
       <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta
+         name="viewport"
+         content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      />
+
       <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-      <link
-         rel="stylesheet"
-         type="text/css"
-         href="/node_modules/patternfly/dist/css/patternfly.css"
-      />
-      <link
-         rel="stylesheet"
-         type="text/css"
-         href="/node_modules/patternfly/dist/css/patternfly-additions.css"
-      />
-      <title>Cody Scruggs</title>
+
+      <title>Z E V E R A I</title>
    </head>
    <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
+
       <div id="root"></div>
    </body>
 </html>
