--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <!-- Meta tags -->
       <meta charset="utf-8" />
       <meta
          name="viewport"
          content="width=device-width, initial-scale=1, shrink-to-fit=no"
       />
-
       <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Roboto:wght@100;300;400;700;900&display=swap"
+         rel="stylesheet"
+      />
       <title>Z E V E R A I</title>
    </head>
    <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
-
       <div id="root"></div>
    </body>
 </html>
