Major styling progress. Added About and social links. (Placeholder). whoami styling nearly complete.

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
          name="viewport"
          content="width=device-width, initial-scale=1, shrink-to-fit=no"
       />
+
       <link
          href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Roboto:wght@100;300;400;700;900&display=swap"
          rel="stylesheet"
@@ -13,8 +14,12 @@
       <link rel="icon" type="image/svg+xml" href="favicon.svg" />
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
       <title>Z E V E R A I</title>
+
+      <script
+         src="https://kit.fontawesome.com/02dee8138c.js"
+         crossorigin="anonymous"
+      ></script>
    </head>
    <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
