ADD new navbar animations. CHANGED NavBar scaling + layout.

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       <link rel="icon" type="image/svg+xml" href="favicon.svg" />
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <title>Z E V E R A I</title>
+      <title>Cody Scruggs - idfkw2phyglhf</title>
 
       <script
          src="https://kit.fontawesome.com/02dee8138c.js"
